# orsa

./: .gitignore  README.md  pyproject.toml  saga-orchestrator.slnx
.github/workflows/: python-publish.yml
examples/: 84f02151-3742-5cc0-bbb2-ba1513e313f0  _1_sample_saga.py  _2_rollback_saga.py  _3_sample_saga_manager.py  bcb9e32f-1c39-4b53-9758-dd9f89b6b96c  examples.py  examples.pyproj  man.py  ordering.py  otypes.py
examples/async_saga_example/: __init__.py
examples/shared/: manager.py  ordering.py
orsa/: __init__.py  orsa.pyproj
orsa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
orsa/context/: _async.py
orsa/core/: __init__.py  _callee.py  _context.py  _logger.py  _manager.py  _orchestrator.py  _types.py
