[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orsa"
version = "0.1.0"
authors = [{name = "Andrey Yakubouski", email = "a.yakubouski@example.com"}]
description = "Flexible and extensible framework for implementing Saga patterns"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "asyncio",
]

[project.urls]
Homepage = "https://github.com/yakubouski/orsa"
Repository = "https://github.com/yakubouski/orsa"