[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "orsa"
dynamic = ["version"]
authors = [{name = "Andrei Yakubouski", email = "yakubouski.a@yandex.com"}]
description = "Flexible and extensible implementation of the Saga patterns"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Office/Business",
]
dependencies = [
    "asyncio",
]

[project.urls]
Homepage = "https://github.com/yakubouski/orsa"
Repository = "https://github.com/yakubouski/orsa"

[tool.setuptools.dynamic]
version = {attr = "orsa.__version__"}